# neopad

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  TASK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: ai.rs  commands.rs  hotkey.rs  installer.rs  lib.rs  main.rs  mcp.rs  tray.rs  window.rs
app/src-tauri/wix/: main.wxs
app/src-tauri/wix/locales/: en-US.wxl
app/src/components/: AiAssistantPanel.vue  AiSettingsSection.vue  AppShell.vue  ArchiveList.vue  ConfirmationDialog.vue  EditorPane.vue  FontDialog.vue  InputDialog.vue  MenuBar.vue  ModeSwitch.vue  NoteLibrary.vue  PreviewPane.vue  ReminderDialog.vue  ReminderList.vue  SearchPanel.vue  SettingsPanel.vue  StatusBar.vue  TabBar.vue  TitleBar.vue
app/src/composables/: useAiAssistant.ts  useArchiveState.ts  useDialogs.ts  useDocumentSession.test.ts  useDocumentSession.ts  useMcpService.ts  useNativeSettings.ts  useNoteExport.test.ts  useNoteExport.ts  useNoteLifecycle.test.ts  useNoteLifecycle.ts  usePreferenceState.test.ts  usePreferenceState.ts  useReminderState.ts  useSearchState.test.ts  useSearchState.ts  useWindowLifecycle.ts
app/src/lib/: ai-editor.test.ts  ai-editor.ts  ai-inline-command.test.ts  ai-inline-command.ts  ai-inline-status.ts  ai-request-state.test.ts  ai-request-state.ts  ai-slash-commands.test.ts  ai-slash-commands.ts  ai-title.test.ts  ai-title.ts  autosave.test.ts  autosave.ts  chinese-maps.ts  document-tab.ts  document-utils.test.ts  document-utils.ts  editor-calculation.test.ts  editor-calculation.ts  editor-code-languages.ts  editor-document-state.test.ts  editor-document-state.ts  editor-search-panel.test.ts  editor-search-panel.ts  editor-theme.ts  help-content.test.ts  help-content.ts  i18n.ts  invoke.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  markdown.test.ts  markdown.ts  note-export.test.ts  note-export.ts  preferences.test.ts  preferences.ts  preview-style.test.ts  preview-style.ts  runtime.ts  (+8 more)
app/src/styles/: base.css  layout.css  theme.css
app/src/types/: ai.ts  editor.test.ts  editor.ts  note.ts
crates/neopad-core/: Cargo.toml
crates/neopad-core/src/: atomic_write.rs  config.rs  lib.rs  lock.rs  note.rs  path.rs  prompt.rs  reminder.rs  search.rs  tab.rs  workspace.rs
docs/: ai.md  architecture.md  development.md  export.md  mcp.md  release-smoke-checklist.md  tasks.md
e2e/: wdio.conf.ts
e2e/specs/: notes.e2e.ts
mcp-server/: Cargo.toml
mcp-server/src/: auth.rs  http.rs  main.rs  protocol.rs  tools.rs
mcp-server/tests/: http.rs  stdio.rs
scripts/: audit-production-dependencies.mjs  build-tauri-bundle.mjs  check-release-tag.mjs  check-versions.ps1  prepare-mcp-sidecar.mjs  prepare-mcp-sidecar.ps1  setup-e2e.ps1  write-release-checksums.mjs
