[workspace]
members = [
  "app/src-tauri",
  "crates/neopad-core",
  "mcp-server"
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["NeoPad contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
