[workspace]
members = [
  "app/src-tauri",
  "crates/neopad-core",
  "mcp-server"
]
resolver = "2"

[workspace.package]
version = "0.4.6"
edition = "2021"
authors = ["NeoPad contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
